# Verified-Anchor

./: .gitignore  HANDOVER.md  LICENSE-APACHE  LICENSE-MIT  README.md  verified_anchor_proposal.md
.github/workflows/: pages.yml
docs/: announcement-v0.1.0.md  constraint-parity-matrix.md  exploit-case-studies.md  migrating-from-anchor.md  publish-checklist.md  verified-anchor-bridge.md
docs/superpowers/: m1-followups.md  m2-followups.md  m3-followups.md  m4-followups.md  m5-followups.md
docs/superpowers/plans/: 2026-05-27-verified-anchor-m1.md  2026-05-27-verified-anchor-m2.md  2026-05-28-verified-anchor-m3.md  2026-05-28-verified-anchor-m4.md  2026-05-29-verified-anchor-m5.md  2026-05-29-verified-anchor-m6.md  2026-05-30-verified-anchor-m7a.md  2026-05-30-verified-anchor-m7b.md
docs/superpowers/specs/: 2026-05-27-verified-anchor-m1-design.md  2026-05-27-verified-anchor-m2-design.md  2026-05-28-verified-anchor-m3-design.md  2026-05-28-verified-anchor-m4-design.md  2026-05-29-verified-anchor-m5-design.md  2026-05-29-verified-anchor-m6-design.md  2026-05-30-verified-anchor-m7a-design.md  2026-05-30-verified-anchor-m7b-design.md
lean/: Audit.lean  README.md  VerifiedAnchor.lean  lake-manifest.json  lakefile.toml
lean/VerifiedAnchor/Codegen/: ExampleGenerated.lean  Generated.lean  Lifecycle.lean  Soundness.lean  StructLifecycle.lean
lean/VerifiedAnchor/Constraints/: Ast.lean  Context.lean
lean/VerifiedAnchor/Contract/: Satisfies.lean  Validates.lean
lean/VerifiedAnchor/Decision/: Agreement.lean  Check.lean
lean/VerifiedAnchor/Examples/: Withdraw.lean
lean/VerifiedAnchor/Solana/: Account.lean  Crypto.lean  Discriminator.lean  Layout.lean  Placeholder.lean  Pubkey.lean  Rent.lean
rust/: Cargo.toml
rust/cargo-verified-anchor/: Cargo.toml
rust/cargo-verified-anchor/src/: collect.rs  discharge.rs  generate.rs  main.rs
rust/cargo-verified-anchor/tests/: cli.rs
rust/verified-anchor/: Cargo.toml
rust/verified-anchor-example/: Cargo.toml
rust/verified-anchor-example/src/: lib.rs
rust/verified-anchor-exploits/: Cargo.toml
rust/verified-anchor-exploits/src/: lib.rs
rust/verified-anchor-macros/: Cargo.toml
rust/verified-anchor-macros/src/: account_attr.rs  account_data_derive.rs  lib.rs
rust/verified-anchor-macros/tests/: compile_fail.rs
rust/verified-anchor-macros/tests/ui/: account_with_args.rs  account_with_args.stderr  bare_u8.rs  bare_u8.stderr  unsupported_constraint.rs  unsupported_constraint.stderr
rust/verified-anchor-program/: Cargo.toml
rust/verified-anchor-program/src/: lib.rs
rust/verified-anchor/src/: account.rs  account_data.rs  context.rs  lib.rs  prelude.rs
rust/verified-anchor/tests/: behavior.rs  lean_spec.rs  runtime_exploits.rs  runtime_lifecycle.rs  runtime_rent.rs  runtime_seeds.rs
web/: README.md  index.html
