[package]
name = "cargo-verified-anchor"
version = "0.1.0"
edition = "2021"
description = "Cargo subcommand that discharges verified-anchor proof obligations via Lean."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/REPLACE_ME/Verification"
homepage = "https://github.com/REPLACE_ME/Verification"
readme = "../../README.md"
keywords = ["solana", "anchor", "verified", "lean4", "cargo-subcommand"]
categories = ["development-tools::cargo-plugins", "command-line-utilities"]

[[bin]]
name = "cargo-verified-anchor"
path = "src/main.rs"
