[package]
name = "cargo-verified-anchor"
version = "0.1.0"
edition = "2021"
description = "Cargo subcommand that discharges verified-anchor proof obligations via Lean."
license = "CC-BY-NC-ND-4.0"
repository = "https://github.com/ParthRathix0/Verified-Anchor"
homepage = "https://github.com/ParthRathix0/Verified-Anchor"
readme = "../../README.md"
keywords = ["solana", "anchor", "verified", "lean4", "cargo-subcommand"]
categories = ["development-tools::cargo-plugins", "command-line-utilities"]

[[bin]]
name = "cargo-verified-anchor"
path = "src/main.rs"
