[package]
name = "verified-anchor-macros"
version = "0.1.0"
edition = "2021"
description = "Proof-producing proc-macros for verified-anchor (#[derive(VerifiedAccounts)], #[derive(AccountData)], #[account])."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/REPLACE_ME/Verification"
homepage = "https://github.com/REPLACE_ME/Verification"
readme = "../../README.md"
keywords = ["solana", "anchor", "verified", "lean4", "proc-macro"]
categories = ["development-tools", "cryptography"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"
sha2 = "0.10"

[dev-dependencies]
trybuild = "1.0"
verified-anchor = { path = "../verified-anchor" }
