[package]
name = "verified-anchor"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-program = "2"
verified-anchor-macros = { path = "../verified-anchor-macros" }

[dev-dependencies]
litesvm = "0.6"
solana-account = "2.2"
solana-hash = "2.2"
solana-instruction = "2.2"
solana-keypair = "2.2"
solana-message = "2.2"
solana-pubkey = "2.2"
solana-sdk-ids = "2.2"
solana-signer = "2.2"
solana-transaction = { version = "2.2", features = ["verify"] }
openssl = { version = "0.10", features = ["vendored"] }
