[package]
name = "verified-anchor"
version = "0.1.0"
edition = "2021"
description = "Formally verified (Lean 4) account-validation runtime for Solana — Anchor-compatible, proof-producing."
license = "Apache-2.0 OR MIT"
repository = "https://github.com/REPLACE_ME/Verification"
homepage = "https://github.com/REPLACE_ME/Verification"
readme = "../../README.md"
keywords = ["solana", "anchor", "verified", "lean4", "proc-macro"]
categories = ["development-tools", "cryptography"]

[dependencies]
solana-program = "2"
verified-anchor-macros = { path = "../verified-anchor-macros", version = "0.1.0" }
inventory = "0.3"
borsh = "1"

[dev-dependencies]
sha2 = "0.10"
litesvm = "0.6"
solana-account = "2.2"
solana-hash = "2.2"
solana-instruction = "2.2"
solana-keypair = "2.2"
solana-message = "2.2"
solana-pubkey = "2.2"
solana-sdk-ids = "2.2"
solana-signer = "2.2"
solana-transaction = { version = "2.2", features = ["verify"] }
openssl = { version = "0.10", features = ["vendored"] }
